// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimeSelector disableMinutes work 1`] = `
"<div class=\\"ix-time-selector\\">
  <ul class=\\"ix-time-selector-column\\">
    <li class=\\"ix-time-selector-cell ix-time-selector-cell-selected\\">00</li>
    <li class=\\"ix-time-selector-cell\\">01</li>
    <li class=\\"ix-time-selector-cell\\">02</li>
    <li class=\\"ix-time-selector-cell\\">03</li>
    <li class=\\"ix-time-selector-cell\\">04</li>
    <li class=\\"ix-time-selector-cell\\">05</li>
    <li class=\\"ix-time-selector-cell\\">06</li>
    <li class=\\"ix-time-selector-cell\\">07</li>
    <li class=\\"ix-time-selector-cell\\">08</li>
    <li class=\\"ix-time-selector-cell\\">09</li>
    <li class=\\"ix-time-selector-cell\\">10</li>
    <li class=\\"ix-time-selector-cell\\">11</li>
    <li class=\\"ix-time-selector-cell\\">12</li>
    <li class=\\"ix-time-selector-cell\\">13</li>
    <li class=\\"ix-time-selector-cell\\">14</li>
    <li class=\\"ix-time-selector-cell\\">15</li>
    <li class=\\"ix-time-selector-cell\\">16</li>
    <li class=\\"ix-time-selector-cell\\">17</li>
    <li class=\\"ix-time-selector-cell\\">18</li>
    <li class=\\"ix-time-selector-cell\\">19</li>
    <li class=\\"ix-time-selector-cell\\">20</li>
    <li class=\\"ix-time-selector-cell\\">21</li>
    <li class=\\"ix-time-selector-cell\\">22</li>
    <li class=\\"ix-time-selector-cell\\">23</li>
  </ul>
  <ul class=\\"ix-time-selector-column\\">
    <li class=\\"ix-time-selector-cell ix-time-selector-cell-selected\\">00</li>
    <li class=\\"ix-time-selector-cell ix-time-selector-cell-disabled\\">01</li>
    <li class=\\"ix-time-selector-cell ix-time-selector-cell-disabled\\">02</li>
    <li class=\\"ix-time-selector-cell ix-time-selector-cell-disabled\\">03</li>
    <li class=\\"ix-time-selector-cell ix-time-selector-cell-disabled\\">04</li>
    <li class=\\"ix-time-selector-cell ix-time-selector-cell-disabled\\">05</li>
    <li class=\\"ix-time-selector-cell\\">06</li>
    <li class=\\"ix-time-selector-cell\\">07</li>
    <li class=\\"ix-time-selector-cell\\">08</li>
    <li class=\\"ix-time-selector-cell\\">09</li>
    <li class=\\"ix-time-selector-cell\\">10</li>
    <li class=\\"ix-time-selector-cell\\">11</li>
    <li class=\\"ix-time-selector-cell\\">12</li>
    <li class=\\"ix-time-selector-cell\\">13</li>
    <li class=\\"ix-time-selector-cell\\">14</li>
    <li class=\\"ix-time-selector-cell\\">15</li>
    <li class=\\"ix-time-selector-cell\\">16</li>
    <li class=\\"ix-time-selector-cell\\">17</li>
    <li class=\\"ix-time-selector-cell\\">18</li>
    <li class=\\"ix-time-selector-cell\\">19</li>
    <li class=\\"ix-time-selector-cell\\">20</li>
    <li class=\\"ix-time-selector-cell\\">21</li>
    <li class=\\"ix-time-selector-cell\\">22</li>
    <li class=\\"ix-time-selector-cell\\">23</li>
    <li class=\\"ix-time-selector-cell\\">24</li>
    <li class=\\"ix-time-selector-cell\\">25</li>
    <li class=\\"ix-time-selector-cell\\">26</li>
    <li class=\\"ix-time-selector-cell\\">27</li>
    <li class=\\"ix-time-selector-cell\\">28</li>
    <li class=\\"ix-time-selector-cell\\">29</li>
    <li class=\\"ix-time-selector-cell\\">30</li>
    <li class=\\"ix-time-selector-cell\\">31</li>
    <li class=\\"ix-time-selector-cell\\">32</li>
    <li class=\\"ix-time-selector-cell\\">33</li>
    <li class=\\"ix-time-selector-cell\\">34</li>
    <li class=\\"ix-time-selector-cell\\">35</li>
    <li class=\\"ix-time-selector-cell\\">36</li>
    <li class=\\"ix-time-selector-cell\\">37</li>
    <li class=\\"ix-time-selector-cell\\">38</li>
    <li class=\\"ix-time-selector-cell\\">39</li>
    <li class=\\"ix-time-selector-cell\\">40</li>
    <li class=\\"ix-time-selector-cell\\">41</li>
    <li class=\\"ix-time-selector-cell\\">42</li>
    <li class=\\"ix-time-selector-cell\\">43</li>
    <li class=\\"ix-time-selector-cell\\">44</li>
    <li class=\\"ix-time-selector-cell\\">45</li>
    <li class=\\"ix-time-selector-cell\\">46</li>
    <li class=\\"ix-time-selector-cell\\">47</li>
    <li class=\\"ix-time-selector-cell\\">48</li>
    <li class=\\"ix-time-selector-cell\\">49</li>
    <li class=\\"ix-time-selector-cell\\">50</li>
    <li class=\\"ix-time-selector-cell\\">51</li>
    <li class=\\"ix-time-selector-cell\\">52</li>
    <li class=\\"ix-time-selector-cell\\">53</li>
    <li class=\\"ix-time-selector-cell\\">54</li>
    <li class=\\"ix-time-selector-cell\\">55</li>
    <li class=\\"ix-time-selector-cell\\">56</li>
    <li class=\\"ix-time-selector-cell\\">57</li>
    <li class=\\"ix-time-selector-cell\\">58</li>
    <li class=\\"ix-time-selector-cell\\">59</li>
  </ul>
  <ul class=\\"ix-time-selector-column\\">
    <li class=\\"ix-time-selector-cell ix-time-selector-cell-selected\\">00</li>
    <li class=\\"ix-time-selector-cell\\">01</li>
    <li class=\\"ix-time-selector-cell\\">02</li>
    <li class=\\"ix-time-selector-cell\\">03</li>
    <li class=\\"ix-time-selector-cell\\">04</li>
    <li class=\\"ix-time-selector-cell\\">05</li>
    <li class=\\"ix-time-selector-cell\\">06</li>
    <li class=\\"ix-time-selector-cell\\">07</li>
    <li class=\\"ix-time-selector-cell\\">08</li>
    <li class=\\"ix-time-selector-cell\\">09</li>
    <li class=\\"ix-time-selector-cell\\">10</li>
    <li class=\\"ix-time-selector-cell\\">11</li>
    <li class=\\"ix-time-selector-cell\\">12</li>
    <li class=\\"ix-time-selector-cell\\">13</li>
    <li class=\\"ix-time-selector-cell\\">14</li>
    <li class=\\"ix-time-selector-cell\\">15</li>
    <li class=\\"ix-time-selector-cell\\">16</li>
    <li class=\\"ix-time-selector-cell\\">17</li>
    <li class=\\"ix-time-selector-cell\\">18</li>
    <li class=\\"ix-time-selector-cell\\">19</li>
    <li class=\\"ix-time-selector-cell\\">20</li>
    <li class=\\"ix-time-selector-cell\\">21</li>
    <li class=\\"ix-time-selector-cell\\">22</li>
    <li class=\\"ix-time-selector-cell\\">23</li>
    <li class=\\"ix-time-selector-cell\\">24</li>
    <li class=\\"ix-time-selector-cell\\">25</li>
    <li class=\\"ix-time-selector-cell\\">26</li>
    <li class=\\"ix-time-selector-cell\\">27</li>
    <li class=\\"ix-time-selector-cell\\">28</li>
    <li class=\\"ix-time-selector-cell\\">29</li>
    <li class=\\"ix-time-selector-cell\\">30</li>
    <li class=\\"ix-time-selector-cell\\">31</li>
    <li class=\\"ix-time-selector-cell\\">32</li>
    <li class=\\"ix-time-selector-cell\\">33</li>
    <li class=\\"ix-time-selector-cell\\">34</li>
    <li class=\\"ix-time-selector-cell\\">35</li>
    <li class=\\"ix-time-selector-cell\\">36</li>
    <li class=\\"ix-time-selector-cell\\">37</li>
    <li class=\\"ix-time-selector-cell\\">38</li>
    <li class=\\"ix-time-selector-cell\\">39</li>
    <li class=\\"ix-time-selector-cell\\">40</li>
    <li class=\\"ix-time-selector-cell\\">41</li>
    <li class=\\"ix-time-selector-cell\\">42</li>
    <li class=\\"ix-time-selector-cell\\">43</li>
    <li class=\\"ix-time-selector-cell\\">44</li>
    <li class=\\"ix-time-selector-cell\\">45</li>
    <li class=\\"ix-time-selector-cell\\">46</li>
    <li class=\\"ix-time-selector-cell\\">47</li>
    <li class=\\"ix-time-selector-cell\\">48</li>
    <li class=\\"ix-time-selector-cell\\">49</li>
    <li class=\\"ix-time-selector-cell\\">50</li>
    <li class=\\"ix-time-selector-cell\\">51</li>
    <li class=\\"ix-time-selector-cell\\">52</li>
    <li class=\\"ix-time-selector-cell\\">53</li>
    <li class=\\"ix-time-selector-cell\\">54</li>
    <li class=\\"ix-time-selector-cell\\">55</li>
    <li class=\\"ix-time-selector-cell\\">56</li>
    <li class=\\"ix-time-selector-cell\\">57</li>
    <li class=\\"ix-time-selector-cell\\">58</li>
    <li class=\\"ix-time-selector-cell\\">59</li>
  </ul>
</div>"
`;

exports[`TimeSelector disableSeconds work 1`] = `
"<div class=\\"ix-time-selector\\">
  <ul class=\\"ix-time-selector-column\\">
    <li class=\\"ix-time-selector-cell ix-time-selector-cell-selected\\">00</li>
    <li class=\\"ix-time-selector-cell\\">01</li>
    <li class=\\"ix-time-selector-cell\\">02</li>
    <li class=\\"ix-time-selector-cell\\">03</li>
    <li class=\\"ix-time-selector-cell\\">04</li>
    <li class=\\"ix-time-selector-cell\\">05</li>
    <li class=\\"ix-time-selector-cell\\">06</li>
    <li class=\\"ix-time-selector-cell\\">07</li>
    <li class=\\"ix-time-selector-cell\\">08</li>
    <li class=\\"ix-time-selector-cell\\">09</li>
    <li class=\\"ix-time-selector-cell\\">10</li>
    <li class=\\"ix-time-selector-cell\\">11</li>
    <li class=\\"ix-time-selector-cell\\">12</li>
    <li class=\\"ix-time-selector-cell\\">13</li>
    <li class=\\"ix-time-selector-cell\\">14</li>
    <li class=\\"ix-time-selector-cell\\">15</li>
    <li class=\\"ix-time-selector-cell\\">16</li>
    <li class=\\"ix-time-selector-cell\\">17</li>
    <li class=\\"ix-time-selector-cell\\">18</li>
    <li class=\\"ix-time-selector-cell\\">19</li>
    <li class=\\"ix-time-selector-cell\\">20</li>
    <li class=\\"ix-time-selector-cell\\">21</li>
    <li class=\\"ix-time-selector-cell\\">22</li>
    <li class=\\"ix-time-selector-cell\\">23</li>
  </ul>
  <ul class=\\"ix-time-selector-column\\">
    <li class=\\"ix-time-selector-cell ix-time-selector-cell-selected\\">00</li>
    <li class=\\"ix-time-selector-cell\\">01</li>
    <li class=\\"ix-time-selector-cell\\">02</li>
    <li class=\\"ix-time-selector-cell\\">03</li>
    <li class=\\"ix-time-selector-cell\\">04</li>
    <li class=\\"ix-time-selector-cell\\">05</li>
    <li class=\\"ix-time-selector-cell\\">06</li>
    <li class=\\"ix-time-selector-cell\\">07</li>
    <li class=\\"ix-time-selector-cell\\">08</li>
    <li class=\\"ix-time-selector-cell\\">09</li>
    <li class=\\"ix-time-selector-cell\\">10</li>
    <li class=\\"ix-time-selector-cell\\">11</li>
    <li class=\\"ix-time-selector-cell\\">12</li>
    <li class=\\"ix-time-selector-cell\\">13</li>
    <li class=\\"ix-time-selector-cell\\">14</li>
    <li class=\\"ix-time-selector-cell\\">15</li>
    <li class=\\"ix-time-selector-cell\\">16</li>
    <li class=\\"ix-time-selector-cell\\">17</li>
    <li class=\\"ix-time-selector-cell\\">18</li>
    <li class=\\"ix-time-selector-cell\\">19</li>
    <li class=\\"ix-time-selector-cell\\">20</li>
    <li class=\\"ix-time-selector-cell\\">21</li>
    <li class=\\"ix-time-selector-cell\\">22</li>
    <li class=\\"ix-time-selector-cell\\">23</li>
    <li class=\\"ix-time-selector-cell\\">24</li>
    <li class=\\"ix-time-selector-cell\\">25</li>
    <li class=\\"ix-time-selector-cell\\">26</li>
    <li class=\\"ix-time-selector-cell\\">27</li>
    <li class=\\"ix-time-selector-cell\\">28</li>
    <li class=\\"ix-time-selector-cell\\">29</li>
    <li class=\\"ix-time-selector-cell\\">30</li>
    <li class=\\"ix-time-selector-cell\\">31</li>
    <li class=\\"ix-time-selector-cell\\">32</li>
    <li class=\\"ix-time-selector-cell\\">33</li>
    <li class=\\"ix-time-selector-cell\\">34</li>
    <li class=\\"ix-time-selector-cell\\">35</li>
    <li class=\\"ix-time-selector-cell\\">36</li>
    <li class=\\"ix-time-selector-cell\\">37</li>
    <li class=\\"ix-time-selector-cell\\">38</li>
    <li class=\\"ix-time-selector-cell\\">39</li>
    <li class=\\"ix-time-selector-cell\\">40</li>
    <li class=\\"ix-time-selector-cell\\">41</li>
    <li class=\\"ix-time-selector-cell\\">42</li>
    <li class=\\"ix-time-selector-cell\\">43</li>
    <li class=\\"ix-time-selector-cell\\">44</li>
    <li class=\\"ix-time-selector-cell\\">45</li>
    <li class=\\"ix-time-selector-cell\\">46</li>
    <li class=\\"ix-time-selector-cell\\">47</li>
    <li class=\\"ix-time-selector-cell\\">48</li>
    <li class=\\"ix-time-selector-cell\\">49</li>
    <li class=\\"ix-time-selector-cell\\">50</li>
    <li class=\\"ix-time-selector-cell\\">51</li>
    <li class=\\"ix-time-selector-cell\\">52</li>
    <li class=\\"ix-time-selector-cell\\">53</li>
    <li class=\\"ix-time-selector-cell\\">54</li>
    <li class=\\"ix-time-selector-cell\\">55</li>
    <li class=\\"ix-time-selector-cell\\">56</li>
    <li class=\\"ix-time-selector-cell\\">57</li>
    <li class=\\"ix-time-selector-cell\\">58</li>
    <li class=\\"ix-time-selector-cell\\">59</li>
  </ul>
  <ul class=\\"ix-time-selector-column\\">
    <li class=\\"ix-time-selector-cell ix-time-selector-cell-selected\\">00</li>
    <li class=\\"ix-time-selector-cell ix-time-selector-cell-disabled\\">01</li>
    <li class=\\"ix-time-selector-cell ix-time-selector-cell-disabled\\">02</li>
    <li class=\\"ix-time-selector-cell ix-time-selector-cell-disabled\\">03</li>
    <li class=\\"ix-time-selector-cell ix-time-selector-cell-disabled\\">04</li>
    <li class=\\"ix-time-selector-cell ix-time-selector-cell-disabled\\">05</li>
    <li class=\\"ix-time-selector-cell\\">06</li>
    <li class=\\"ix-time-selector-cell\\">07</li>
    <li class=\\"ix-time-selector-cell\\">08</li>
    <li class=\\"ix-time-selector-cell\\">09</li>
    <li class=\\"ix-time-selector-cell\\">10</li>
    <li class=\\"ix-time-selector-cell\\">11</li>
    <li class=\\"ix-time-selector-cell\\">12</li>
    <li class=\\"ix-time-selector-cell\\">13</li>
    <li class=\\"ix-time-selector-cell\\">14</li>
    <li class=\\"ix-time-selector-cell\\">15</li>
    <li class=\\"ix-time-selector-cell\\">16</li>
    <li class=\\"ix-time-selector-cell\\">17</li>
    <li class=\\"ix-time-selector-cell\\">18</li>
    <li class=\\"ix-time-selector-cell\\">19</li>
    <li class=\\"ix-time-selector-cell\\">20</li>
    <li class=\\"ix-time-selector-cell\\">21</li>
    <li class=\\"ix-time-selector-cell\\">22</li>
    <li class=\\"ix-time-selector-cell\\">23</li>
    <li class=\\"ix-time-selector-cell\\">24</li>
    <li class=\\"ix-time-selector-cell\\">25</li>
    <li class=\\"ix-time-selector-cell\\">26</li>
    <li class=\\"ix-time-selector-cell\\">27</li>
    <li class=\\"ix-time-selector-cell\\">28</li>
    <li class=\\"ix-time-selector-cell\\">29</li>
    <li class=\\"ix-time-selector-cell\\">30</li>
    <li class=\\"ix-time-selector-cell\\">31</li>
    <li class=\\"ix-time-selector-cell\\">32</li>
    <li class=\\"ix-time-selector-cell\\">33</li>
    <li class=\\"ix-time-selector-cell\\">34</li>
    <li class=\\"ix-time-selector-cell\\">35</li>
    <li class=\\"ix-time-selector-cell\\">36</li>
    <li class=\\"ix-time-selector-cell\\">37</li>
    <li class=\\"ix-time-selector-cell\\">38</li>
    <li class=\\"ix-time-selector-cell\\">39</li>
    <li class=\\"ix-time-selector-cell\\">40</li>
    <li class=\\"ix-time-selector-cell\\">41</li>
    <li class=\\"ix-time-selector-cell\\">42</li>
    <li class=\\"ix-time-selector-cell\\">43</li>
    <li class=\\"ix-time-selector-cell\\">44</li>
    <li class=\\"ix-time-selector-cell\\">45</li>
    <li class=\\"ix-time-selector-cell\\">46</li>
    <li class=\\"ix-time-selector-cell\\">47</li>
    <li class=\\"ix-time-selector-cell\\">48</li>
    <li class=\\"ix-time-selector-cell\\">49</li>
    <li class=\\"ix-time-selector-cell\\">50</li>
    <li class=\\"ix-time-selector-cell\\">51</li>
    <li class=\\"ix-time-selector-cell\\">52</li>
    <li class=\\"ix-time-selector-cell\\">53</li>
    <li class=\\"ix-time-selector-cell\\">54</li>
    <li class=\\"ix-time-selector-cell\\">55</li>
    <li class=\\"ix-time-selector-cell\\">56</li>
    <li class=\\"ix-time-selector-cell\\">57</li>
    <li class=\\"ix-time-selector-cell\\">58</li>
    <li class=\\"ix-time-selector-cell\\">59</li>
  </ul>
</div>"
`;

exports[`TimeSelector disabledHours work 1`] = `
"<div class=\\"ix-time-selector\\">
  <ul class=\\"ix-time-selector-column\\">
    <li class=\\"ix-time-selector-cell ix-time-selector-cell-selected\\">00</li>
    <li class=\\"ix-time-selector-cell ix-time-selector-cell-disabled\\">01</li>
    <li class=\\"ix-time-selector-cell ix-time-selector-cell-disabled\\">02</li>
    <li class=\\"ix-time-selector-cell ix-time-selector-cell-disabled\\">03</li>
    <li class=\\"ix-time-selector-cell ix-time-selector-cell-disabled\\">04</li>
    <li class=\\"ix-time-selector-cell ix-time-selector-cell-disabled\\">05</li>
    <li class=\\"ix-time-selector-cell\\">06</li>
    <li class=\\"ix-time-selector-cell\\">07</li>
    <li class=\\"ix-time-selector-cell\\">08</li>
    <li class=\\"ix-time-selector-cell\\">09</li>
    <li class=\\"ix-time-selector-cell\\">10</li>
    <li class=\\"ix-time-selector-cell\\">11</li>
    <li class=\\"ix-time-selector-cell\\">12</li>
    <li class=\\"ix-time-selector-cell\\">13</li>
    <li class=\\"ix-time-selector-cell\\">14</li>
    <li class=\\"ix-time-selector-cell\\">15</li>
    <li class=\\"ix-time-selector-cell\\">16</li>
    <li class=\\"ix-time-selector-cell\\">17</li>
    <li class=\\"ix-time-selector-cell\\">18</li>
    <li class=\\"ix-time-selector-cell\\">19</li>
    <li class=\\"ix-time-selector-cell\\">20</li>
    <li class=\\"ix-time-selector-cell\\">21</li>
    <li class=\\"ix-time-selector-cell\\">22</li>
    <li class=\\"ix-time-selector-cell\\">23</li>
  </ul>
  <ul class=\\"ix-time-selector-column\\">
    <li class=\\"ix-time-selector-cell ix-time-selector-cell-selected\\">00</li>
    <li class=\\"ix-time-selector-cell\\">01</li>
    <li class=\\"ix-time-selector-cell\\">02</li>
    <li class=\\"ix-time-selector-cell\\">03</li>
    <li class=\\"ix-time-selector-cell\\">04</li>
    <li class=\\"ix-time-selector-cell\\">05</li>
    <li class=\\"ix-time-selector-cell\\">06</li>
    <li class=\\"ix-time-selector-cell\\">07</li>
    <li class=\\"ix-time-selector-cell\\">08</li>
    <li class=\\"ix-time-selector-cell\\">09</li>
    <li class=\\"ix-time-selector-cell\\">10</li>
    <li class=\\"ix-time-selector-cell\\">11</li>
    <li class=\\"ix-time-selector-cell\\">12</li>
    <li class=\\"ix-time-selector-cell\\">13</li>
    <li class=\\"ix-time-selector-cell\\">14</li>
    <li class=\\"ix-time-selector-cell\\">15</li>
    <li class=\\"ix-time-selector-cell\\">16</li>
    <li class=\\"ix-time-selector-cell\\">17</li>
    <li class=\\"ix-time-selector-cell\\">18</li>
    <li class=\\"ix-time-selector-cell\\">19</li>
    <li class=\\"ix-time-selector-cell\\">20</li>
    <li class=\\"ix-time-selector-cell\\">21</li>
    <li class=\\"ix-time-selector-cell\\">22</li>
    <li class=\\"ix-time-selector-cell\\">23</li>
    <li class=\\"ix-time-selector-cell\\">24</li>
    <li class=\\"ix-time-selector-cell\\">25</li>
    <li class=\\"ix-time-selector-cell\\">26</li>
    <li class=\\"ix-time-selector-cell\\">27</li>
    <li class=\\"ix-time-selector-cell\\">28</li>
    <li class=\\"ix-time-selector-cell\\">29</li>
    <li class=\\"ix-time-selector-cell\\">30</li>
    <li class=\\"ix-time-selector-cell\\">31</li>
    <li class=\\"ix-time-selector-cell\\">32</li>
    <li class=\\"ix-time-selector-cell\\">33</li>
    <li class=\\"ix-time-selector-cell\\">34</li>
    <li class=\\"ix-time-selector-cell\\">35</li>
    <li class=\\"ix-time-selector-cell\\">36</li>
    <li class=\\"ix-time-selector-cell\\">37</li>
    <li class=\\"ix-time-selector-cell\\">38</li>
    <li class=\\"ix-time-selector-cell\\">39</li>
    <li class=\\"ix-time-selector-cell\\">40</li>
    <li class=\\"ix-time-selector-cell\\">41</li>
    <li class=\\"ix-time-selector-cell\\">42</li>
    <li class=\\"ix-time-selector-cell\\">43</li>
    <li class=\\"ix-time-selector-cell\\">44</li>
    <li class=\\"ix-time-selector-cell\\">45</li>
    <li class=\\"ix-time-selector-cell\\">46</li>
    <li class=\\"ix-time-selector-cell\\">47</li>
    <li class=\\"ix-time-selector-cell\\">48</li>
    <li class=\\"ix-time-selector-cell\\">49</li>
    <li class=\\"ix-time-selector-cell\\">50</li>
    <li class=\\"ix-time-selector-cell\\">51</li>
    <li class=\\"ix-time-selector-cell\\">52</li>
    <li class=\\"ix-time-selector-cell\\">53</li>
    <li class=\\"ix-time-selector-cell\\">54</li>
    <li class=\\"ix-time-selector-cell\\">55</li>
    <li class=\\"ix-time-selector-cell\\">56</li>
    <li class=\\"ix-time-selector-cell\\">57</li>
    <li class=\\"ix-time-selector-cell\\">58</li>
    <li class=\\"ix-time-selector-cell\\">59</li>
  </ul>
  <ul class=\\"ix-time-selector-column\\">
    <li class=\\"ix-time-selector-cell ix-time-selector-cell-selected\\">00</li>
    <li class=\\"ix-time-selector-cell\\">01</li>
    <li class=\\"ix-time-selector-cell\\">02</li>
    <li class=\\"ix-time-selector-cell\\">03</li>
    <li class=\\"ix-time-selector-cell\\">04</li>
    <li class=\\"ix-time-selector-cell\\">05</li>
    <li class=\\"ix-time-selector-cell\\">06</li>
    <li class=\\"ix-time-selector-cell\\">07</li>
    <li class=\\"ix-time-selector-cell\\">08</li>
    <li class=\\"ix-time-selector-cell\\">09</li>
    <li class=\\"ix-time-selector-cell\\">10</li>
    <li class=\\"ix-time-selector-cell\\">11</li>
    <li class=\\"ix-time-selector-cell\\">12</li>
    <li class=\\"ix-time-selector-cell\\">13</li>
    <li class=\\"ix-time-selector-cell\\">14</li>
    <li class=\\"ix-time-selector-cell\\">15</li>
    <li class=\\"ix-time-selector-cell\\">16</li>
    <li class=\\"ix-time-selector-cell\\">17</li>
    <li class=\\"ix-time-selector-cell\\">18</li>
    <li class=\\"ix-time-selector-cell\\">19</li>
    <li class=\\"ix-time-selector-cell\\">20</li>
    <li class=\\"ix-time-selector-cell\\">21</li>
    <li class=\\"ix-time-selector-cell\\">22</li>
    <li class=\\"ix-time-selector-cell\\">23</li>
    <li class=\\"ix-time-selector-cell\\">24</li>
    <li class=\\"ix-time-selector-cell\\">25</li>
    <li class=\\"ix-time-selector-cell\\">26</li>
    <li class=\\"ix-time-selector-cell\\">27</li>
    <li class=\\"ix-time-selector-cell\\">28</li>
    <li class=\\"ix-time-selector-cell\\">29</li>
    <li class=\\"ix-time-selector-cell\\">30</li>
    <li class=\\"ix-time-selector-cell\\">31</li>
    <li class=\\"ix-time-selector-cell\\">32</li>
    <li class=\\"ix-time-selector-cell\\">33</li>
    <li class=\\"ix-time-selector-cell\\">34</li>
    <li class=\\"ix-time-selector-cell\\">35</li>
    <li class=\\"ix-time-selector-cell\\">36</li>
    <li class=\\"ix-time-selector-cell\\">37</li>
    <li class=\\"ix-time-selector-cell\\">38</li>
    <li class=\\"ix-time-selector-cell\\">39</li>
    <li class=\\"ix-time-selector-cell\\">40</li>
    <li class=\\"ix-time-selector-cell\\">41</li>
    <li class=\\"ix-time-selector-cell\\">42</li>
    <li class=\\"ix-time-selector-cell\\">43</li>
    <li class=\\"ix-time-selector-cell\\">44</li>
    <li class=\\"ix-time-selector-cell\\">45</li>
    <li class=\\"ix-time-selector-cell\\">46</li>
    <li class=\\"ix-time-selector-cell\\">47</li>
    <li class=\\"ix-time-selector-cell\\">48</li>
    <li class=\\"ix-time-selector-cell\\">49</li>
    <li class=\\"ix-time-selector-cell\\">50</li>
    <li class=\\"ix-time-selector-cell\\">51</li>
    <li class=\\"ix-time-selector-cell\\">52</li>
    <li class=\\"ix-time-selector-cell\\">53</li>
    <li class=\\"ix-time-selector-cell\\">54</li>
    <li class=\\"ix-time-selector-cell\\">55</li>
    <li class=\\"ix-time-selector-cell\\">56</li>
    <li class=\\"ix-time-selector-cell\\">57</li>
    <li class=\\"ix-time-selector-cell\\">58</li>
    <li class=\\"ix-time-selector-cell\\">59</li>
  </ul>
</div>"
`;

exports[`TimeSelector render work 1`] = `
"<div class=\\"ix-time-selector\\">
  <ul class=\\"ix-time-selector-column\\">
    <li class=\\"ix-time-selector-cell ix-time-selector-cell-selected\\">00</li>
    <li class=\\"ix-time-selector-cell\\">01</li>
    <li class=\\"ix-time-selector-cell\\">02</li>
    <li class=\\"ix-time-selector-cell\\">03</li>
    <li class=\\"ix-time-selector-cell\\">04</li>
    <li class=\\"ix-time-selector-cell\\">05</li>
    <li class=\\"ix-time-selector-cell\\">06</li>
    <li class=\\"ix-time-selector-cell\\">07</li>
    <li class=\\"ix-time-selector-cell\\">08</li>
    <li class=\\"ix-time-selector-cell\\">09</li>
    <li class=\\"ix-time-selector-cell\\">10</li>
    <li class=\\"ix-time-selector-cell\\">11</li>
    <li class=\\"ix-time-selector-cell\\">12</li>
    <li class=\\"ix-time-selector-cell\\">13</li>
    <li class=\\"ix-time-selector-cell\\">14</li>
    <li class=\\"ix-time-selector-cell\\">15</li>
    <li class=\\"ix-time-selector-cell\\">16</li>
    <li class=\\"ix-time-selector-cell\\">17</li>
    <li class=\\"ix-time-selector-cell\\">18</li>
    <li class=\\"ix-time-selector-cell\\">19</li>
    <li class=\\"ix-time-selector-cell\\">20</li>
    <li class=\\"ix-time-selector-cell\\">21</li>
    <li class=\\"ix-time-selector-cell\\">22</li>
    <li class=\\"ix-time-selector-cell\\">23</li>
  </ul>
  <ul class=\\"ix-time-selector-column\\">
    <li class=\\"ix-time-selector-cell ix-time-selector-cell-selected\\">00</li>
    <li class=\\"ix-time-selector-cell\\">01</li>
    <li class=\\"ix-time-selector-cell\\">02</li>
    <li class=\\"ix-time-selector-cell\\">03</li>
    <li class=\\"ix-time-selector-cell\\">04</li>
    <li class=\\"ix-time-selector-cell\\">05</li>
    <li class=\\"ix-time-selector-cell\\">06</li>
    <li class=\\"ix-time-selector-cell\\">07</li>
    <li class=\\"ix-time-selector-cell\\">08</li>
    <li class=\\"ix-time-selector-cell\\">09</li>
    <li class=\\"ix-time-selector-cell\\">10</li>
    <li class=\\"ix-time-selector-cell\\">11</li>
    <li class=\\"ix-time-selector-cell\\">12</li>
    <li class=\\"ix-time-selector-cell\\">13</li>
    <li class=\\"ix-time-selector-cell\\">14</li>
    <li class=\\"ix-time-selector-cell\\">15</li>
    <li class=\\"ix-time-selector-cell\\">16</li>
    <li class=\\"ix-time-selector-cell\\">17</li>
    <li class=\\"ix-time-selector-cell\\">18</li>
    <li class=\\"ix-time-selector-cell\\">19</li>
    <li class=\\"ix-time-selector-cell\\">20</li>
    <li class=\\"ix-time-selector-cell\\">21</li>
    <li class=\\"ix-time-selector-cell\\">22</li>
    <li class=\\"ix-time-selector-cell\\">23</li>
    <li class=\\"ix-time-selector-cell\\">24</li>
    <li class=\\"ix-time-selector-cell\\">25</li>
    <li class=\\"ix-time-selector-cell\\">26</li>
    <li class=\\"ix-time-selector-cell\\">27</li>
    <li class=\\"ix-time-selector-cell\\">28</li>
    <li class=\\"ix-time-selector-cell\\">29</li>
    <li class=\\"ix-time-selector-cell\\">30</li>
    <li class=\\"ix-time-selector-cell\\">31</li>
    <li class=\\"ix-time-selector-cell\\">32</li>
    <li class=\\"ix-time-selector-cell\\">33</li>
    <li class=\\"ix-time-selector-cell\\">34</li>
    <li class=\\"ix-time-selector-cell\\">35</li>
    <li class=\\"ix-time-selector-cell\\">36</li>
    <li class=\\"ix-time-selector-cell\\">37</li>
    <li class=\\"ix-time-selector-cell\\">38</li>
    <li class=\\"ix-time-selector-cell\\">39</li>
    <li class=\\"ix-time-selector-cell\\">40</li>
    <li class=\\"ix-time-selector-cell\\">41</li>
    <li class=\\"ix-time-selector-cell\\">42</li>
    <li class=\\"ix-time-selector-cell\\">43</li>
    <li class=\\"ix-time-selector-cell\\">44</li>
    <li class=\\"ix-time-selector-cell\\">45</li>
    <li class=\\"ix-time-selector-cell\\">46</li>
    <li class=\\"ix-time-selector-cell\\">47</li>
    <li class=\\"ix-time-selector-cell\\">48</li>
    <li class=\\"ix-time-selector-cell\\">49</li>
    <li class=\\"ix-time-selector-cell\\">50</li>
    <li class=\\"ix-time-selector-cell\\">51</li>
    <li class=\\"ix-time-selector-cell\\">52</li>
    <li class=\\"ix-time-selector-cell\\">53</li>
    <li class=\\"ix-time-selector-cell\\">54</li>
    <li class=\\"ix-time-selector-cell\\">55</li>
    <li class=\\"ix-time-selector-cell\\">56</li>
    <li class=\\"ix-time-selector-cell\\">57</li>
    <li class=\\"ix-time-selector-cell\\">58</li>
    <li class=\\"ix-time-selector-cell\\">59</li>
  </ul>
  <ul class=\\"ix-time-selector-column\\">
    <li class=\\"ix-time-selector-cell ix-time-selector-cell-selected\\">00</li>
    <li class=\\"ix-time-selector-cell\\">01</li>
    <li class=\\"ix-time-selector-cell\\">02</li>
    <li class=\\"ix-time-selector-cell\\">03</li>
    <li class=\\"ix-time-selector-cell\\">04</li>
    <li class=\\"ix-time-selector-cell\\">05</li>
    <li class=\\"ix-time-selector-cell\\">06</li>
    <li class=\\"ix-time-selector-cell\\">07</li>
    <li class=\\"ix-time-selector-cell\\">08</li>
    <li class=\\"ix-time-selector-cell\\">09</li>
    <li class=\\"ix-time-selector-cell\\">10</li>
    <li class=\\"ix-time-selector-cell\\">11</li>
    <li class=\\"ix-time-selector-cell\\">12</li>
    <li class=\\"ix-time-selector-cell\\">13</li>
    <li class=\\"ix-time-selector-cell\\">14</li>
    <li class=\\"ix-time-selector-cell\\">15</li>
    <li class=\\"ix-time-selector-cell\\">16</li>
    <li class=\\"ix-time-selector-cell\\">17</li>
    <li class=\\"ix-time-selector-cell\\">18</li>
    <li class=\\"ix-time-selector-cell\\">19</li>
    <li class=\\"ix-time-selector-cell\\">20</li>
    <li class=\\"ix-time-selector-cell\\">21</li>
    <li class=\\"ix-time-selector-cell\\">22</li>
    <li class=\\"ix-time-selector-cell\\">23</li>
    <li class=\\"ix-time-selector-cell\\">24</li>
    <li class=\\"ix-time-selector-cell\\">25</li>
    <li class=\\"ix-time-selector-cell\\">26</li>
    <li class=\\"ix-time-selector-cell\\">27</li>
    <li class=\\"ix-time-selector-cell\\">28</li>
    <li class=\\"ix-time-selector-cell\\">29</li>
    <li class=\\"ix-time-selector-cell\\">30</li>
    <li class=\\"ix-time-selector-cell\\">31</li>
    <li class=\\"ix-time-selector-cell\\">32</li>
    <li class=\\"ix-time-selector-cell\\">33</li>
    <li class=\\"ix-time-selector-cell\\">34</li>
    <li class=\\"ix-time-selector-cell\\">35</li>
    <li class=\\"ix-time-selector-cell\\">36</li>
    <li class=\\"ix-time-selector-cell\\">37</li>
    <li class=\\"ix-time-selector-cell\\">38</li>
    <li class=\\"ix-time-selector-cell\\">39</li>
    <li class=\\"ix-time-selector-cell\\">40</li>
    <li class=\\"ix-time-selector-cell\\">41</li>
    <li class=\\"ix-time-selector-cell\\">42</li>
    <li class=\\"ix-time-selector-cell\\">43</li>
    <li class=\\"ix-time-selector-cell\\">44</li>
    <li class=\\"ix-time-selector-cell\\">45</li>
    <li class=\\"ix-time-selector-cell\\">46</li>
    <li class=\\"ix-time-selector-cell\\">47</li>
    <li class=\\"ix-time-selector-cell\\">48</li>
    <li class=\\"ix-time-selector-cell\\">49</li>
    <li class=\\"ix-time-selector-cell\\">50</li>
    <li class=\\"ix-time-selector-cell\\">51</li>
    <li class=\\"ix-time-selector-cell\\">52</li>
    <li class=\\"ix-time-selector-cell\\">53</li>
    <li class=\\"ix-time-selector-cell\\">54</li>
    <li class=\\"ix-time-selector-cell\\">55</li>
    <li class=\\"ix-time-selector-cell\\">56</li>
    <li class=\\"ix-time-selector-cell\\">57</li>
    <li class=\\"ix-time-selector-cell\\">58</li>
    <li class=\\"ix-time-selector-cell\\">59</li>
  </ul>
</div>"
`;
